feat: Implement network filtering drawer
This commit introduces a navigation drawer that allows users to filter displayed vehicles by their transportation network.

Key changes:
- Add `NetworkFilterDrawer.java` to manage the drawer's state and logic.
- Create `item_network.xml` layout for individual network filter toggles within the drawer.
- Modify `activity_main.xml` to use a `DrawerLayout` and include a button to open the filter menu.
- Update `MainActivity.java` to initialize the drawer, populate it with network data, and filter markers based on the selected networks.
- Adjust `MarkerData.java` to derive the network reference directly from the marker ID, removing the `networkId` field.
- Refactor `ApiService.java` and `FetchingManager.java` to handle fetching the list of all available networks.
- Lower `minSdk` from 33 to 30 to increase device compatibility.